# c2-app-127

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  JOURNAL.md  PRD_final.md  PRD_game.md  README.md  WORKLOG.md  brief.md  brief_final.md  docker-compose.rag.yml  docker-compose.yml  pyproject.toml
BE_Web/: .env.example  Dockerfile  README.md  be_web.db  pyproject.toml  requirements.txt
BE_Web/alembic/: env.py
BE_Web/alembic/versions/: 4c6894594c38_initial_schema.py  9f4a8c6d2b11_add_chat_history_tables.py  b7c1e4d9a2f0_add_lesson_uploads.py  d2f6a1c9b4e8_add_lesson_upload_chunks.py  e7a9c2d5f1b3_attach_uploads_to_chat_sessions.py
BE_Web/app/: main.py
BE_Web/app/api/: auth.py  chat.py  games.py  templates.py  uploads.py
BE_Web/app/core/: debug.py  security.py  settings.py
BE_Web/app/db/: models.py  schema_compat.py  session.py
BE_Web/app/schemas/: ai.py  auth.py  chat.py  games.py  uploads.py
BE_Web/app/services/: ai_client.py  ai_gateway.py  game_mapper.py  (+4 more)
BE_Web/tests/: conftest.py  test_chat_api.py  test_games_api.py  test_lesson_upload_api.py
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: config.py  debug.py  main.py  models.py
backend/data/: templates.json
backend/scripts/: ingest_gdpt_to_weaviate.py  repair_primary_math_kb.py  smoke_generate.py  test_pipeline.py
backend/static/: battleship.html
backend/tests/: conftest.py  test_curriculum_retrieval.py  test_generator.py  test_graph.py  test_guardrail.py  test_llm_adapter.py  test_primary_math_kb.py  test_prompt_guidance.py  test_recommender.py  test_schemas.py  test_validator.py
(+182 files in other folders)
